tests/errors/sqrt_neg.f90
program sqrt_neg
    print *, sqrt(-1.0)
end program
